move room api on openapi
